# roas5400-lab

./: .gitignore  LICENSE  README.md
.tools/: __init__.py  encrypt_submission.py  generate_eval_keys.py  issue_eval.py
roas5400-lab/: README.md  pyproject.toml
roas5400-lab/configs/: course_baseline_reference.yaml
roas5400-lab/demo/: activation.py  croco_demo.py  patchify_unpatchify_flow.py  predict_masked_test.py  random_mask_patch_demo.py
roas5400-lab/tests/: __init__.py  adapters.py  test_adamw.py  test_cat_block.py  test_croco.py  test_croco_encode_image.py  test_cross_attention.py  test_cross_block.py  test_embedding.py  test_encoder_block.py  test_environment.py  test_gelu.py  test_get_lr_cosine_schedule.py  test_layernorm.py  test_linear.py  test_mlp.py  test_patch_embed.py  test_patchify.py  test_random_mask_patch.py  test_rope.py  test_rope1d.py  test_scaled_dot_product_attention.py  test_self_attention.py  test_softmax.py
roas5400-lab/tests/assets/: cat_block_expected.npz  croco_encode_expected.pt  croco_expected.pt  cross_attention_dec_blocks_0_expected.npz  cross_block_dec_blocks_0_expected.npz  embedding_expected.npz  encoder_block_enc_blocks_0_expected.npz  gelu_expected.npz  layernorm_dec_blocks_0_norm1_expected.npz  linear_dec_blocks_0_mlp_fc1_expected.npz  linear_dec_blocks_0_mlp_fc1_expected_no_bias.npz  mlp_dec_blocks_0_expected.npz  patch_embed_expected.npz  patchify_unpatchify_duck_expected.npz  rope1d_expected.npz  rope2d_expected.npz  scaled_dot_product_attention_expected.npz  self_attention_dec_blocks_0_expected.npz  softmax_expected.npz
(+6 files in other folders)
